deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-app
  namespace: sandbox-app
  labels:
    app: sandbox-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sandbox-app
  template:
    metadata:
      labels:
        app: sandbox-app
    spec:
      containers:
        - name: sandbox-app
          image: registry.yuri.dev.br/sandbox-app:latest
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: registry-secret
