service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-app
  namespace: sandbox-app
spec:
  selector:
    app: sandbox-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
